// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a secondary image 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "A Caption",
              "credits": "Some Credits",
            }
          }
          imageOptions={
            Object {
              "display": "secondary",
              "ratio": "3:2",
              "url": "https://image-2.io",
            }
          }
        />
      </View>
    </View>
    <View />
    <View>
      <View>
        <Text>
          65 comments
        </Text>
        <Text>
          Comments are subject to our community guidelines, which can be viewed 
          <Text
            accessibilityRole="link"
          >
            here
          </Text>
        </Text>
        <View
          accessibilityComponentType="button"
          accessibilityLabel="VIEW COMMENTS"
          accessibilityTraits="button"
        >
          <Text
            title="VIEW COMMENTS"
          >
            VIEW COMMENTS
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. an inline image 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <Text>
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "A Caption",
              "credits": "Some Credits",
            }
          }
          imageOptions={
            Object {
              "display": "inline",
              "ratio": "9:4",
              "url": "https://image-inline.io",
            }
          }
        />
      </View>
    </View>
    <View />
    <View>
      <View>
        <Text>
          65 comments
        </Text>
        <Text>
          Comments are subject to our community guidelines, which can be viewed 
          <Text
            accessibilityRole="link"
          >
            here
          </Text>
        </Text>
        <View
          accessibilityComponentType="button"
          accessibilityLabel="VIEW COMMENTS"
          accessibilityTraits="button"
        >
          <Text
            title="VIEW COMMENTS"
          >
            VIEW COMMENTS
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
